[gd_scene load_steps=17 format=2]

[ext_resource path="res://Styling/Theme.tres" type="StyleBox" id=1]
[ext_resource path="res://Main/Main.gd" type="Script" id=2]
[ext_resource path="res://Styling/MainFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Tiles/Player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main/LevelFinish.gd" type="Script" id=6]
[ext_resource path="res://Styling/ColorInvert.tres" type="Material" id=7]
[ext_resource path="res://Styling/moon.png" type="Texture" id=8]
[ext_resource path="res://Audio/sound_icon.png" type="Texture" id=9]
[ext_resource path="res://Audio/sound_off_icon.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Message"
tracks/0/type = "value"
tracks/0/path = NodePath("Finish:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 114, 350 ), Vector2( 114, 144 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Finish")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "HintText"
tracks/0/type = "value"
tracks/0/path = NodePath("LevelTextContainer/LevelText/Container/LevelHint:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="Main" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.707107, -0.408204, 0.577381, 0, 0.816541, 0.577287, -0.707107, -0.408204, 0.577381, 20, 20, 20 )
projection = 1
size = 32.0

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="PopupAnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Message = SubResource( 1 )

[node name="HintAnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/HintText = SubResource( 2 )

[node name="Finish" type="PanelContainer" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -20.0
margin_right = 68.0
margin_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Finish"]
margin_left = 4.0
margin_top = 8.0
margin_right = 132.0
margin_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Finish/VBoxContainer"]
margin_right = 128.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Congratulations!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Finish/VBoxContainer"]
margin_top = 14.0
margin_right = 128.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "press enter"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTextContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelText" type="PanelContainer" parent="LevelTextContainer"]
margin_right = 656.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="LevelTextContainer/LevelText"]
margin_left = 4.0
margin_top = 4.0
margin_right = 652.0
margin_bottom = 28.0
size_flags_horizontal = 9
size_flags_vertical = 4

[node name="LevelName" type="Label" parent="LevelTextContainer/LevelText/Container"]
margin_right = 648.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level 0: Level Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelHint" type="Label" parent="LevelTextContainer/LevelText/Container"]
margin_top = 14.0
margin_right = 648.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level's hint text directing you."
autowrap = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuIconBar" type="HBoxContainer" parent="LevelTextContainer"]
margin_top = 36.0
margin_right = 656.0
margin_bottom = 57.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DarkMode" type="Button" parent="LevelTextContainer/MenuIconBar"]
margin_right = 21.0
margin_bottom = 21.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundMode" type="TextureButton" parent="LevelTextContainer/MenuIconBar"]
visible = false
margin_left = 25.0
margin_right = 46.0
margin_bottom = 21.0
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="FPSLabel" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -648.0
margin_top = -10.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "XYZ fps"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorInverter" type="ColorRect" parent="."]
visible = false
material = ExtResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="LevelTextContainer/MenuIconBar/DarkMode" to="." method="_on_DarkMode_pressed"]
[connection signal="toggled" from="LevelTextContainer/MenuIconBar/SoundMode" to="." method="_on_SoundMode_toggled"]
